# libre-canvas-poc

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: bench.yml  ci.yml  deploy.yml
core/: Cargo.toml
core/src/: input.rs  lib.rs
core/src/brush/: blend.rs  kubelka_munk.rs  mod.rs
core/src/canvas/: mod.rs  sparse.rs  tile.rs
core/src/layer/: composite.rs  mod.rs
core/src/stroke/: dab.rs  mod.rs  smoothing.rs
docker/: Dockerfile
docs/: FULL_DESIGN_DOC.md  PERFORMANCE.md  POC_OVERVIEW.md
scripts/: parse_bench.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/canvas/: CanvasManager.test.ts  CanvasManager.ts  InputHandler.ts
web/src/file/: FileManager.test.ts  FileManager.ts
web/src/history/: UndoManager.test.ts  UndoManager.ts
web/src/layer/: LayerManager.test.ts  LayerManager.ts
web/src/renderer/: Canvas2DRenderer.test.ts  Canvas2DRenderer.ts  Renderer.ts  WebGPURenderer.ts  grainTexture.test.ts  grainTexture.ts  webgpu.d.ts
web/src/styles/: main.css
web/src/ui/: LayerPanel.ts  Toolbar.ts
web/src/wasm/: wasmLoader.ts
